--- a/vignettes/server_functions.Rmd
+++ b/vignettes/server_functions.Rmd
@@ -1,150 +1,25 @@
-#'---
-#'title: "server_functions.R"
-#'output:
-#'  rmarkdown::html_document:
-#'    toc: yes
-#'    toc_depth: 2
-#'    toc_float: yes
-#'---
+---
+title: "server_functions.R"
+output:
+ rmarkdown::html_document:
+   toc: yes
+   toc_depth: 2
+   toc_float: yes
+   number_sections: true
+---
+#  Data overview plots 
 
-#' #  Data overview plots 
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  Data overview plots ------------------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
-#' # Source country-specific server functions
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~  Source country-specific server functions -----
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Here we source two functions related to reading in and transforming the source data,
-#' namely read_file_raw and read_file_transformed.
-#' We also source the UI elements required to load in the source data.
-#' This is the only part of the app that changes between countries.
-#' There are currently two versions of functions/reactives/UI elements that are sourced in this script.
-#' - One version creates UI elements to enter Go.Data credentials and fetches the Go.Data data
-#' - The other version creates UI elements to upload KoboCollect csvs.
+## data_completeness_plot
+Here we output a visualization of the entire long dataframe.
+Uses the viz_dat function
 
-
-source(here(paste0("helper_scripts/server_functions_for_",
-                   PARAMS$country_code, ".R")), local = T)
-
-
-#' ## read_file_filtered
-#' The 'read_file_filtered' function takes in data from read_file_transformed_reactive 
-#' It also takes in a date_of_review variable.
-#' It filters out contacts who had not begun followup by the selected date_of_review 
-#' Also, for contacts being followed, "future" are relabelled as such. 
-#' The output of read_file_filtered is a df that feed most graphs in the app. 
-
-read_file_filtered <- function() {
-  ## takes no inputs for now
-  
-  
-  contacts_df_long_transformed <- read_file_transformed_reactive()
-  all_cols <- names(contacts_df_long_transformed)
-  
-  ## note that this needs to match the columns on which filters are created
-  ## in the output$filters section
-  
-  cols_to_filter <- 
-    contacts_df_long_transformed %>%
-    as.data.frame() %>% ## not sure why but tibble doesn't work
-    ## filters not created for rows that change across each contact
-    select(-any_of(c("follow_up_date", "follow_up_day", "follow_up_status",
-                     ## no filters for synthetic columns either
-                     "row_id","row_number","sort_number", 
-                     ## and no filters on names. 
-                     ## Franck mentioned not printing names to app for privacy
-                     "first_name", "last_name"))) %>%
-    ## no filters for columns that are all NA
-    janitor::remove_empty(which = "cols") %>% 
-    names()
-  
-  
-  
-  ## dont filter unless asked to, obviously
-  if ((!is.null(input$filter_or_not)) && input$filter_or_not == TRUE) {
-    
-    ## the filtering syntax works for dataframes, but not tibbles, for some reason
-    temp <- contacts_df_long_transformed %>% as.data.frame()
-    
-    
-    for (i in 1:length(all_cols)) {
-      
-      col_vector <- temp[all_cols[i]]
-      values_to_keep <- input[[all_cols[i]]]
-      na_id <- paste0("na_", all_cols[i])
-      keep_na <- input[[na_id]]
-      
-      ## only filter on those in the cols_to_filter group.
-      if (col_vector %in% cols_to_filter) {
-        
-        ## FACTOR OR CHARACTER COLUMNS ~~~~~~~~~~~~~~~~~~~
-        if (is.factor(col_vector) | is.character(col_vector)) {
-          temp <- temp[col_vector %in% values_to_keep | is.na(col_vector), ]
-          ## drop NAs if asked to do so
-          if (!is.null(keep_na) && keep_na == FALSE) temp <- temp[!is.na(col_vector), ]
-          
-          ## NUMERIC COLUMNS  ~~~~~~~~~~~~~~~~~~~
-        } else if (is.numeric(col_vector) | lubridate::is.Date(col_vector)) {
-          
-          ## keep values greater than the minimum and less than maximum
-          ## as indicated by user on drag string
-          temp <- temp[col_vector >= values_to_keep[1] | is.na(col_vector), ]
-          temp <- temp[col_vector <= values_to_keep[2] | is.na(col_vector), ]
-          
-          ## drop NAs if asked to do so
-          if (!is.null(keep_na) && keep_na == FALSE) temp <- temp[!is.na(col_vector), ]
-        }
-        
-        contacts_df_long_transformed <-
-          temp %>% as_tibble() %>%
-          ## not sure if necessary again
-          # convert dates to dates
-          mutate(across(
-            .cols = matches("date|Date"),
-            .fns = as.Date
-          ))
-      }
-    }
-  }
-  
-  
-  todays_date <-  todays_date_reactive()
-  
-  
-  contacts_df_long <-
-    contacts_df_long_transformed %>%
-    ## add future follow-up.
-    mutate(follow_up_status = if_else(follow_up_date > todays_date,
-                                      "Future follow-up",
-                                      follow_up_status
-    )) %>%
-    mutate(follow_up_status_simple = if_else(follow_up_date > todays_date,
-                                             "Future follow-up",
-                                             follow_up_status_simple
-    )) %>%
-    # keep only those for whom follow-up had begun by the date of review
-    group_by(row_id) %>%
-    filter(min(follow_up_date) <= todays_date) %>%
-    ungroup() %>%
-    # add legend colors
-    # legend_df is defined in global.R
-    left_join(legend_df, by = c("follow_up_status" = "breaks"))
-  
-  ## return
-  contacts_df_long
-}
-
-#' #  Data overview plots 
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~  Data overview plots ------------------
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-#' ## data_completeness_plot
-#' Here we output a visualization of the entire long dataframe.
-#' Uses the viz_dat function
-
+```{r }
 data_completeness_plot <- function(contacts_df_long_transformed){
   
   contacts_df_long_transformed %>% 
@@ -164,11 +39,12 @@ data_completeness_plot <- function(contacts_df_long_transformed){
     theme(title = element_text(face = "bold"))
   
 }
+```
 
+## data_cardinality_plot
+This is a plot using the 'inspect_cat' function of the inspectdf package 
 
-#' ## data_cardinality_plot
-#' This is a plot using the 'inspect_cat' function of the inspectdf package 
-
+```{r }
 data_cardinality_plot <- function(contacts_df_long_transformed){
   
   contacts_df_long_transformed %>% 
@@ -179,10 +55,12 @@ data_cardinality_plot <- function(contacts_df_long_transformed){
     labs(title = "Freq. of categorical vars in dataset")
   
 }
+```
 
-#' ## reactable_table
-#' Here, we output the entire long table for easy viewing, or searching
+## reactable_table
+Here, we output the entire long table for easy viewing, or searching
 
+```{r }
 reactable_table <- 
   function(contacts_df_long_transformed){
     
@@ -195,14 +73,19 @@ reactable_table <-
                 theme = reactableTheme(stripedColor = "#f0f1fc",
                                        highlightColor = "#DADEFB"))
   }   
+```
 
+# Generate downloadable report
 
-#' # Generate downloadable report
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  Generate downloadable report --------------------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
-#' ## download_report_function
+## download_report_function
+
+```{r }
 download_report_function <- 
   function() {
   downloadHandler(
@@ -302,27 +185,33 @@ download_report_function <-
 )
   
 }
+```
 
-#' #  OUTPUTS PERTAINING TO ALL CONTACTS
+#  OUTPUTS PERTAINING TO ALL CONTACTS
+
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ OUTPUTS PERTAINING TO ALL CONTACTS ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
+#  Value boxes
 
-#' #  Value boxes
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Value boxes  --------------------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Below we define the value-box functions and return their outputs.
-#' These functions return an HTML Shiny value-box when the report_format parameter
-#' is "shiny", and a ggplot-based value-box otherwise.
-#' Like most of the remaining functions that the app uses, these take in 
-#' two primary inputs: the long contacts dataframe (one row per follow-up-day), 
-#' and the date of review.
+```
 
+Below we define the value-box functions and return their outputs.
+These functions return an HTML Shiny value-box when the report_format parameter
+is "shiny", and a ggplot-based value-box otherwise.
+Like most of the remaining functions that the app uses, these take in 
+two primary inputs: the long contacts dataframe (one row per follow-up-day), 
+and the date of review.
+## contacts_per_day_value_box
 
-#' ## contacts_per_day_value_box
-
+```{r }
 ## here we count the number of new contacts registered per day,
 ## based on follow-up start date
 contacts_per_day_value_box <- 
@@ -402,10 +291,11 @@ contacts_per_day_value_box <-
       
     
   }
+```
 
+## cumulative_contacts_value_box
 
-#' ## cumulative_contacts_value_box
-
+```{r }
 cumulative_contacts_value_box <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
   
@@ -486,10 +376,11 @@ cumulative_contacts_value_box <-
     return(output_valuebox)
     
   }
+```
 
+## contacts_under_surveillance_value_box
 
-#' ## contacts_under_surveillance_value_box
-
+```{r }
 contacts_under_surveillance_value_box <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -565,10 +456,11 @@ contacts_under_surveillance_value_box <-
     
     
   }
+```
 
+## pct_contacts_followed_value_box
 
-#' ## pct_contacts_followed_value_box
-
+```{r }
 pct_contacts_followed_value_box <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -662,20 +554,21 @@ pct_contacts_followed_value_box <-
     
     return(output_valuebox)
   }
+```
 
+#  Contacts per region
 
-
-
-#' #  Contacts per region
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Contacts per region  --------------------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Below we call the contacts_per_admin_1 functions. These show the distribution 
-#' of contacts over admin level 1 and admin level 2.
+```
 
+Below we call the contacts_per_admin_1 functions. These show the distribution 
+of contacts over admin level 1 and admin level 2.
+## all_contacts_per_admin_1_table
 
-#' ## all_contacts_per_admin_1_table
-
+```{r }
 all_contacts_per_admin_1_table <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -752,9 +645,11 @@ all_contacts_per_admin_1_table <-
     
     
   }
+```
 
-#' ## all_contacts_per_admin_1_sunburst_plot
+## all_contacts_per_admin_1_sunburst_plot
 
+```{r }
 all_contacts_per_admin_1_sunburst_plot <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -850,10 +745,11 @@ all_contacts_per_admin_1_sunburst_plot <-
     }
     
   }
+```
 
+## all_contacts_per_admin_1_bar_chart
 
-#' ## all_contacts_per_admin_1_bar_chart
-
+```{r }
 all_contacts_per_admin_1_bar_chart <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -944,10 +840,11 @@ all_contacts_per_admin_1_bar_chart <-
     
     
   }
+```
 
+## all_contacts_per_admin_1_text
 
-#' ## all_contacts_per_admin_1_text
-
+```{r }
 all_contacts_per_admin_1_text <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
   
@@ -1026,17 +923,21 @@ all_contacts_per_admin_1_text <-
   
   
 }
+```
 
-#' #  Contacts surveilled over time
+#  Contacts surveilled over time
+
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Contacts surveilled over time  -----------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Functions showing how many contacts were under surveillance at each time point, 
-#' segregated by region.
+```
 
+Functions showing how many contacts were under surveillance at each time point, 
+segregated by region.
+## contacts_surveilled_admin_1_bar_chart
 
-#' ## contacts_surveilled_admin_1_bar_chart
-
+```{r }
 contacts_surveilled_admin_1_bar_chart <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1103,11 +1004,11 @@ contacts_surveilled_admin_1_bar_chart <-
     }
 
   }
+```
 
+## contacts_surveilled_admin_1_bar_chart_relative
 
-
-#' ## contacts_surveilled_admin_1_bar_chart_relative
-
+```{r }
 contacts_surveilled_admin_1_bar_chart_relative <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1177,9 +1078,11 @@ contacts_surveilled_admin_1_bar_chart_relative <-
     }
     
   }
+```
 
-#' ## contacts_surveilled_admin_1_text
+## contacts_surveilled_admin_1_text
 
+```{r }
 contacts_surveilled_admin_1_text <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1262,19 +1165,21 @@ contacts_surveilled_admin_1_text <-
     
     
   }
+```
 
+#  Contacts per case
 
-
-
-#' #  Contacts per case
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Contacts per case  -----------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Functions that output the number of contacts linked to each case
-#' At the moment (May 13, 2021), the Go.Data app version has no information for this column.
+```
 
-#' ## total_contacts_per_case_donut_plot
+Functions that output the number of contacts linked to each case
+At the moment (May 13, 2021), the Go.Data app version has no information for this column.
+## total_contacts_per_case_donut_plot
 
+```{r }
 total_contacts_per_case_donut_plot <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1336,9 +1241,11 @@ total_contacts_per_case_donut_plot <-
     }
     
   }
+```
 
-#' ## total_contacts_per_case_bar_chart
+## total_contacts_per_case_bar_chart
 
+```{r }
 total_contacts_per_case_bar_chart <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1412,10 +1319,11 @@ total_contacts_per_case_bar_chart <-
     }
     
   }
+```
 
+## total_contacts_per_case_text
 
-#' ## total_contacts_per_case_text
-
+```{r }
 total_contacts_per_case_text <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1487,18 +1395,21 @@ total_contacts_per_case_text <-
     }
     
   }
+```
 
+#  Contacts per link type
 
-#' #  Contacts per link type
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Contacts per link type  -----------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Functions that output the number of contacts for each type of link (e.g. family)
-#' At the moment (May 13, 2021), the Go.Data app version has no information for this column.
+```
 
+Functions that output the number of contacts for each type of link (e.g. family)
+At the moment (May 13, 2021), the Go.Data app version has no information for this column.
+## total_contacts_per_link_type_donut_plot
 
-#' ## total_contacts_per_link_type_donut_plot
-
+```{r }
 total_contacts_per_link_type_donut_plot <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1554,9 +1465,11 @@ total_contacts_per_link_type_donut_plot <-
     }
     
   }
+```
 
-#' ## total_contacts_per_link_type_bar_chart
+## total_contacts_per_link_type_bar_chart
 
+```{r }
 total_contacts_per_link_type_bar_chart <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1623,10 +1536,11 @@ total_contacts_per_link_type_bar_chart <-
     }
     
   }
+```
 
+## total_contacts_per_link_type_text
 
-#' ## total_contacts_per_link_type_text
-
+```{r }
 total_contacts_per_link_type_text <-
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -1700,23 +1614,28 @@ total_contacts_per_link_type_text <-
     
     
   }
+```
 
-#' #  OUTPUTS PERTAINING TO ACTIVE CONTACTS
+#  OUTPUTS PERTAINING TO ACTIVE CONTACTS
+
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ OUTPUTS PERTAINING TO ACTIVE CONTACTS ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
+#  Active contacts bar chart and snake plot
 
-
-#' #  Active contacts bar chart and snake plot
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Active contacts bar chart and snake plot ------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Graphs and tables showing active contacts by status
+```
 
+Graphs and tables showing active contacts by status
+## active_contacts_breakdown_bar_chart
 
-#' ## active_contacts_breakdown_bar_chart
-
+```{r }
 active_contacts_breakdown_bar_chart <- 
   function(contacts_df_long, todays_date, report_format = "shiny", legend_df){
     
@@ -1800,9 +1719,11 @@ active_contacts_breakdown_bar_chart <-
       output_plotly
     }
   }
+```
 
-#' ## active_contacts_breakdown_table
+## active_contacts_breakdown_table
 
+```{r }
 active_contacts_breakdown_table <- 
   function(contacts_df_long, todays_date, download = FALSE){
     
@@ -1859,9 +1780,11 @@ active_contacts_breakdown_table <-
     
     
   }
+```
 
-#' ## active_contacts_breakdown_table_download
+## active_contacts_breakdown_table_download
 
+```{r }
 active_contacts_breakdown_table_download <- 
   function(){
     downloadHandler(
@@ -1876,9 +1799,11 @@ active_contacts_breakdown_table_download <-
     )
     
   }
+```
 
-#' ## active_contacts_timeline_snake_plot
+## active_contacts_timeline_snake_plot
 
+```{r }
 active_contacts_timeline_snake_plot <- 
   function(contacts_df_long, todays_date, report_format = "shiny", legend_df){
   
@@ -2004,9 +1929,11 @@ active_contacts_timeline_snake_plot <-
     }
     
   }
+```
 
-#' ## active_contacts_snake_plot_selected_table
+## active_contacts_snake_plot_selected_table
 
+```{r }
 active_contacts_snake_plot_selected_table <- 
   function(contacts_df_long, selected_ids,  download = FALSE) {
     
@@ -2035,10 +1962,11 @@ active_contacts_snake_plot_selected_table <-
     
     
   }
-  
+```
 
-#' ## active_contacts_snake_plot_selected_table_download
+## active_contacts_snake_plot_selected_table_download
 
+```{r }
 active_contacts_snake_plot_selected_table_download <- 
     function(){
       downloadHandler(
@@ -2056,9 +1984,11 @@ active_contacts_snake_plot_selected_table_download <-
     
     
   }
+```
 
-#' ## active_contacts_timeline_table
+## active_contacts_timeline_table
 
+```{r }
 active_contacts_timeline_table <- 
   function(contacts_df_long, todays_date, download = FALSE){
     
@@ -2094,9 +2024,11 @@ active_contacts_timeline_table <-
       }
       
   }
+```
 
-#' ## active_contacts_timeline_table_download
+## active_contacts_timeline_table_download
 
+```{r }
 active_contacts_timeline_table_download <- 
   function(contacts_df_long, todays_date){
     downloadHandler(
@@ -2111,10 +2043,11 @@ active_contacts_timeline_table_download <-
     )
     
   }
+```
 
+## active_contacts_timeline_text
 
-#' ## active_contacts_timeline_text
-
+```{r }
 active_contacts_timeline_text <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
   
@@ -2161,20 +2094,20 @@ active_contacts_timeline_text <-
   
   
 }
+```
 
-  
+#  Contacts lost to follow-up
 
-
-
-
-#' #  Contacts lost to follow-up
+```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ Contacts lost to follow-up  ------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#' Tables (and their download handlers) summarizing the number of individuals lost to follow-up
+```
 
-#' ## contacts_lost_24_to_72_hours_table
+Tables (and their download handlers) summarizing the number of individuals lost to follow-up
+## contacts_lost_24_to_72_hours_table
 
+```{r }
 contacts_lost_24_to_72_hours_table <- 
   function(contacts_df_long, todays_date, report_format = "shiny", download = FALSE){
     
@@ -2390,11 +2323,11 @@ contacts_lost_24_to_72_hours_table <-
     }
     
   }
+```
 
+## contacts_lost_24_to_72_hours_table_download
 
-#' ## contacts_lost_24_to_72_hours_table_download
-
-
+```{r }
 contacts_lost_24_to_72_hours_table_download <- 
   function(){
     downloadHandler(
@@ -2409,10 +2342,11 @@ contacts_lost_24_to_72_hours_table_download <-
     )
     
   }
+```
 
+## lost_contacts_linelist_table
 
-#' ## lost_contacts_linelist_table
-
+```{r }
 lost_contacts_linelist_table <- 
   function(contacts_df_long, todays_date, download = FALSE, report_format = "shiny"){
     
@@ -2559,10 +2493,11 @@ lost_contacts_linelist_table <-
                 ))
     
   }
+```
 
+## lost_contacts_linelist_table_download
 
-#' ## lost_contacts_linelist_table_download
-
+```{r }
 lost_contacts_linelist_table_download <- 
   function(){
     downloadHandler(
@@ -2577,10 +2512,11 @@ lost_contacts_linelist_table_download <-
     )
     
   }
+```
 
-#' ## lost_contacts_linelist_text
+## lost_contacts_linelist_text
 
-
+```{r }
 lost_contacts_linelist_text <- 
   function(contacts_df_long, todays_date, report_format = "shiny"){
     
@@ -2662,22 +2598,5 @@ lost_contacts_linelist_text <-
       }
     
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```
 
